Bug 431014 - LSP Client. In dark mode some types has very low contrast (are too dark)
Summary: LSP Client. In dark mode some types has very low contrast (are too dark)
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-31 17:08 UTC by Piotr Mierzwinski
Modified: 2021-03-16 20:22 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04.0
Sentry Crash Report:


Attachments
kate_LSP-client_highlighting (9.99 KB, image/png)
2020-12-31 17:08 UTC, Piotr Mierzwinski
Details
kate-dark-mode-with-LSP (95.79 KB, image/png)
2021-03-15 22:57 UTC, Piotr Mierzwinski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Mierzwinski 2020-12-31 17:08:17 UTC
Created attachment 134421 [details]
kate_LSP-client_highlighting

SUMMARY
Semantic highlighting seems works for C/C++ well. Only in dark mode, opening cpp file I can see very low contrast (color is too dark) for name of classes, like QString, user defined, etc.
Example in attachment.

QString sFileName = QDir::cleanPath(sName);


STEPS TO REPRODUCE
1. Turn on LSP Client (default configuration)
2. Turn on 'Semantic highlighting'
3. Open any cpp file

OBSERVED RESULT
Color of name of classes used in code is too dark for dark mode. Seems they have very low contrast.

EXPECTED RESULT
Color of classes used in code should be brighter or have different color just to have better contrast (with dark background).

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: YES
(available in About System)
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
I use "ROUNDED DARK" as Appearance -> Colors
Comment 1 Piotr Mierzwinski 2020-12-31 17:14:26 UTC
ADDITIONAL INFORMATION
In Kate I have set Color Themes -> Theme: "Breeze Dark"
and Default theme for kate: "Automatic Selection"
Comment 2 Bug Janitor Service 2021-01-22 13:25:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/195
Comment 3 Christoph Cullmann 2021-01-23 08:53:58 UTC
Git commit 010b6c711112d82e804a844b5e3a07839ea9c09e by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 23/01/2021 at 08:53.
Pushed by cullmann into branch 'master'.

Use the new theme function to provide better semantic highlighting

This change is a second proposal for better semantic highlighting for
C++. It can be considered as temporary till we are able to support for
new API and till LSPs themselves add proper support for offical semantic
tokens.

Since we rely on the new API call (theme()), this change will only work
for KF > 5.79.
Related: bug 431011

M  +1    -0    addons/lspclient/CMakeLists.txt
M  +6    -2    addons/lspclient/lspclientpluginview.cpp
M  +7    -0    addons/lspclient/lspclientprotocol.h
M  +6    -1    addons/lspclient/lspclientserver.cpp
A  +195  -0    addons/lspclient/lspsemantichighlighting.cpp     [License: MIT]
A  +76   -0    addons/lspclient/lspsemantichighlighting.h     [License: MIT]

https://invent.kde.org/utilities/kate/commit/010b6c711112d82e804a844b5e3a07839ea9c09e
Comment 4 Piotr Mierzwinski 2021-03-15 22:57:23 UTC
Created attachment 136714 [details]
kate-dark-mode-with-LSP
Comment 5 Piotr Mierzwinski 2021-03-15 22:58:16 UTC
Seems this fix doesn't work. Yesterday I got update with KF-5.80. Today tested Kate. Result please find in attache screenshot. Types have still the same colour.
Comment 6 Waqar Ahmed 2021-03-16 10:45:10 UTC
Please wait for "Kate 21.04" release to come out or build from source.
Comment 7 Piotr Mierzwinski 2021-03-16 20:15:58 UTC
(In reply to Waqar Ahmed from comment #6)
> Please wait for "Kate 21.04" release to come out or build from source.

Sorry, for reopening. Message from Christoph was a bit misleading. He said: 
"..., this change will only work for KF > 5.79.", so I tested after got KF-5.80
Thanks for info.
Comment 8 Christoph Cullmann 2021-03-16 20:22:36 UTC
No problem, I was just not clear enough here ;)