addons/lspclient/lspclientprotocol.h
@@ -16,6 +16,9 @@
 #include <QUrl>
 #include <QVector>
 
+#include "lspsemantichighlighting.h"
+
+#include <ktexteditor_version.h>
 #include <KTextEditor/Cursor>
 #include <KTextEditor/Range>
 
@@ -66,7 +69,11 @@ struct LSPDocumentOnTypeFormattingOptions : public LSPSignatureHelpOptions {
 
 struct LSPSemanticHighlightingOptions {
     // cf. https://manual.macromates.com/en/language_grammars
+#if KTEXTEDITOR_VERSION >= QT_VERSION_CHECK(5, 79, 0)
+    SemanticHighlighting scopes;
+#else
     QVector<QVector<QString>> scopes;
+#endif
 };
 
 struct LSPServerCapabilities {
